--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -904,6 +904,7 @@ menu.submenu_page ul li a {
   background: #222;
 }
 #bg_main_menu_lateral_admin figure#bg_logo {
+  cursor: pointer;
   padding: 20px;
   max-width: 100%;
   height: auto;
@@ -3501,7 +3502,7 @@ h1 {
   max-width: 100%;
   margin: 0 auto;
   display: grid;
-  grid-template-columns: 250px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: minmax(160px, 14%) 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-areas: "aside header header header header header header header" "aside  cp     cp     cp     cp     cp     cp     cp" "aside  footer footer footer footer footer footer footer";
 }
 
@@ -3694,7 +3695,8 @@ h1 {
 footer {
   grid-area: footer;
   height: 50px;
-  background: #111;
+  background: #f0f0f0;
+  border-top: 1px solid #333;
 }
 
 /*# sourceMappingURL=style.css.map */
