Ajustes de layout

--- a/src/assets/css/sass/elements/_header_admin.scss
+++ b/src/assets/css/sass/elements/_header_admin.scss
@@ -4,7 +4,7 @@
   z-index: 3;
     grid-area: header;
     background: $primary-color;
-    background: #f0f0f0;
+    background: #eee;
     position: fixed;
     border-bottom:1px solid #666;
     width: 100%;
