--- a/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
+++ b/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
@@ -7,7 +7,8 @@
 
     figure#bg_logo {
       cursor:pointer;
-      padding:20px;
+     
+      padding:20px 60px;
       max-width: 100%;
      height:auto;
       overflow:hidden;
@@ -22,7 +23,7 @@
     }
  
   nav{
-    margin-top:40px;
+    margin-top:30px;
     ul li {
       clear:both;
       a {
