Ajustes de layout

--- a/src/assets/css/sass/fluxo_caixa/_resumoFluxoCaixa.scss
+++ b/src/assets/css/sass/fluxo_caixa/_resumoFluxoCaixa.scss
@@ -79,7 +79,8 @@
     }
 
     .td_total{
-        background:#222;
+        background:#333;
+        border-color:#555;
         color:rgb(90, 216, 90);
         text-align: center;
     }
