--- a/src/assets/css/sass/abstracts/_color_cursos.scss
+++ b/src/assets/css/sass/abstracts/_color_cursos.scss
@@ -48,3 +48,29 @@
 *[class*="border_Desenvolvimento Web"]{
     //border-color: #f90 !important;
 }
+//Background
+*[class*='background_inform'], *[class*="background_Inform"] {
+    background: $color-informatica !important; color:#fff;
+}
+*[class*='background_excel'], *[class*="background_Excel"] {
+    background: $color-excel !important; color:#fff;
+}
+*[class*='background_desenvolvimento web'], *[class*="background_Desenvolvimento Web"] {
+    background: $color-web !important; color:#fff;
+}
+*[class*='background_inglês'], *[class*="background_Inglês"] {
+    background: $color-ingles !important; color:#fff;
+}
+*[class*='background_espanhol'], *[class*="background_Espanhol"] {
+    background: $color-espanhol !important; color:#fff;
+}
+*[class*='background_adm'], *[class*="background_Adm"] {
+    background: $color-adm !important; color:#fff;
+}
+*[class*='background_banco'], *[class*="background_Banco"] {
+    background: $color-banco !important; color:#fff;
+}
+
+*[class*="background_Desenvolvimento Web"]{
+    //border-color: #f90 !important; color:#fff;
+}
