--- a/src/components/contratos/infoContrato.html
+++ b/src/components/contratos/infoContrato.html
@@ -101,8 +101,15 @@
             <input id="curso_duracao" readonly='true' type="number"/> </div>
           <div  id='div_curso_parcelas'> <label>Parcelas: </label>
           <input readonly='true' id="curso_parcelas" type="number" /> </div>
-          <div  id='div_curso_vencimento'> 
-            <label>Dia Venc.: </label> <input  readonly='true' id="curso_vencimento" type="number" /> </div>
+          <div  id='div_curso_horas_aula'> 
+            <label>Horas p/ Aula: </label>
+            <input readonly='true' id="curso_horas_aula" type="number" /> 
+          </div>
+          <div  id='div_curso_carga_horaria'> 
+            <label>Carga Horária: </label>
+            <input  readonly='true' id="curso_carga_horaria" type="number" /> 
+          </div>
+      
         </div>
         <!--row-->
         <div class='row'>
@@ -115,7 +122,9 @@
         </div>
         <!--row-->
         <div class='row'>
-        
+          <div  id='div_curso_vencimento'> 
+            <label>Dia Venc.: </label> <input  readonly='true' id="curso_vencimento" type="number" /> 
+          </div>
           <div  id='div_curso_inicio'> <label>Data de Início: </label> 
             <input id="curso_inicio" readonly='true' type="date" /> </div>
           <div  id='div_curso_data'> <label>Data Contrato: </label> 
