Gerador de Certificados adicionado

--- a/src/components/alunos/formAddCertificado.html
+++ b/src/components/alunos/formAddCertificado.html
@@ -12,8 +12,8 @@
       <div>
         <label for="certificado_cod">Cod:</label>
         <input type='text' id="certificado_cod" />
-        <label for="data_expedicao">Data Expedição:</label>
-        <input type='date' id='data_expedicao'>
+        <label for="data_expedicao">Data Emissão:</label>
+        <input type='date' id='data_emissao'>
       </div>
       <div id='div_aluno'>
         <label for="aluno_ra">RA:</label>
@@ -41,8 +41,6 @@
           <input id='endereco' value='Rua Gustavo Bacarisas, nº 8 - Sala 3 - Jd. Zilda, São Paulo - SP' />
       </div>
     </fieldset>
- 
-
 
     
     <input type="submit" value="Salvar" />
