--- a/src/components/contratos/infoContrato.html
+++ b/src/components/contratos/infoContrato.html
@@ -91,6 +91,8 @@
       <div class='fieldset' id='fieldset_curso'>
           <div  class='div_input'id='div_curso_nome'> <label>Curso: </label>
             <input readonly='true' id='curso_nome' type='text'>
+            <input id='curso_cod' readonly='true' type='text' />
+
           </div>
        
           <div  class='div_input' id='div_curso_modulos'> 
