--- a/src/assets/css/sass/alunos/_form_add_certificado.scss
+++ b/src/assets/css/sass/alunos/_form_add_certificado.scss
@@ -15,5 +15,8 @@
             flex-grow: 1;
         }
     }
-  
+    #certificado_cod, #aluno_ra{
+        max-width:110px !important;
+    }
+
 }
