--- a/src/components/alunos/formAddCertificado.html
+++ b/src/components/alunos/formAddCertificado.html
@@ -12,7 +12,7 @@
       <div>
         <label for="certificado_cod">Cod:</label>
         <input type='text' id="certificado_cod" />
-        <label for="data_expedicao">Data Emissão:</label>
+        <label for="data_expedicao">Emissão:</label>
         <input type='date' id='data_emissao'>
       </div>
       <div id='div_aluno'>
@@ -38,7 +38,11 @@
       </div>
       <div>
         <label for="endereco">Local:</label>
-          <input id='endereco' value='Rua Gustavo Bacarisas, nº 8 - Sala 3 - Jd. Zilda, São Paulo - SP' />
+        <input id='endereco' value='Rua Gustavo Bacarisas, nº 8 - Sala 3 - Jd. Zilda, São Paulo - SP' />
+      </div>
+      <div>
+        <label for="endereco">Obs.:</label>
+        <textarea id='obs'></textarea>
       </div>
     </fieldset>
 
