--- a/src/components/fluxoCaixa/formAddSaidaAvulsa.html
+++ b/src/components/fluxoCaixa/formAddSaidaAvulsa.html
@@ -15,11 +15,17 @@
         <label>Tipo de Saída.</label>
         <select required id='tipo_saida'>
             <option disabled selected></option>
-            <option value='dinheiro'>Pró-labore</option>
-            <option value='dinheiro'>Contas</option>
-            <option value='débito'>Suplementos</option>
-            <option value='crédito'>Manutenção</option>
-            <option value='pix'>Anúncio</option>
+            <option value='conta'>Conta</option>
+            <option value='pró-labore'>Pró-labore</option>
+            <option value='marketing'>Marketing</option>
+            <option value='limpeza'>Limpeza</option>
+            <option value='alimentação'>Alimentação</option>
+            <option value='material'>Material</option>
+            <option value='manutenção'>Manutenção</option>
+            <option value='aparelhagem'>Aparelhagem</option>
+            <option value='outro'>Outro</option>
+            
+      
         </select>
     </div>
     <div  class='div_inputs ' id='div_saida_valor'>
