--- a/src/components/fluxoCaixa/viewTableSaidasInfo.html
+++ b/src/components/fluxoCaixa/viewTableSaidasInfo.html
@@ -31,7 +31,7 @@
         <th>Data</th>
         <th>Descrição</th>
         <th>Tipo de Saída</th>
-        <th>Valor</th>
+        <th>Valor R$</th>
         <th></th>
         </thead>
         <tbody id='tbody'>
