--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -349,7 +349,7 @@ template {
   display: none;
 }
 
-.btn, #fieldset_resp div #btn_marcar_resp_aluno, .btn-secondary, .btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #controle_aula_content .btn_add_curso, .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], #form_delete_curso input[type=submit], #form_add_certificado input[type=submit], #form_add_curso input[type=submit], .forms_controle_aula input[type=submit], #form_add_curso_info input[type=submit], #form_info_aluno input[type=submit], .form_info input[type=submit], .btn-default-delete, #form_add_saida_avulsa fieldset .div_submit input[type=submit], .btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #controle_aula_content .btn_add, menu.submenu_page ul li a {
+.btn, #fieldset_resp div #btn_marcar_resp_aluno, .btn-secondary, .btn-primary, .forms_fixed input[type=submit], #form_add_aluno input[type=submit], #controle_aula_content .btn_add_curso, .form_flex_absolute input[type=submit], .form_flex_static input[type=submit], #form_config_perm input[type=submit], #form_reauth_user input[type=submit], #form_add_user input[type=submit], #form_delete_curso input[type=submit], #form_add_certificado input[type=submit], #form_add_curso input[type=submit], .forms_controle_aula input[type=submit], #form_add_curso_info input[type=submit], #form_info_aluno input[type=submit], .form_info input[type=submit], .btn-default-delete, #form_add_saida_avulsa fieldset .div_submit input[type=submit], .btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], #form_info_aluno .btn_create_certificado, .form_info .btn_create_certificado, #form_info_aluno #label_checkbox_certificado_entregue, .form_info #label_checkbox_certificado_entregue, .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #controle_aula_content .btn_add, menu.submenu_page ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -359,22 +359,22 @@ template {
   border: 0px;
   cursor: pointer;
 }
-.btn svg, #fieldset_resp div #btn_marcar_resp_aluno svg, .btn-secondary svg, .btn-primary svg, .forms_fixed input[type=submit] svg, #form_add_aluno input[type=submit] svg, #controle_aula_content .btn_add_curso svg, .form_flex_absolute input[type=submit] svg, .form_flex_static input[type=submit] svg, #form_config_perm input[type=submit] svg, #form_reauth_user input[type=submit] svg, #form_add_user input[type=submit] svg, #form_delete_curso input[type=submit] svg, #form_add_certificado input[type=submit] svg, #form_add_curso input[type=submit] svg, .forms_controle_aula input[type=submit] svg, #form_add_curso_info input[type=submit] svg, #form_info_aluno input[type=submit] svg, .form_info input[type=submit] svg, .btn-default-delete svg, #form_add_saida_avulsa fieldset .div_submit input[type=submit] svg, .btn-default svg, form.forms_fluxo_caixa .div_submit input[type=submit] svg, .sub_menu_fluxo_caixa ul li a svg, .nav_forms ul li a svg, #page_login #login_content #form_login input[type=submit] svg, .forms_fixed .label_btn_checkbox svg, #form_add_aluno .label_btn_checkbox svg, #bg_div_id_contrato #label_id_automatico_contrato svg, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo svg, #controle_aula_content .btn_add svg, menu.submenu_page ul li a svg {
+.btn svg, #fieldset_resp div #btn_marcar_resp_aluno svg, .btn-secondary svg, .btn-primary svg, .forms_fixed input[type=submit] svg, #form_add_aluno input[type=submit] svg, #controle_aula_content .btn_add_curso svg, .form_flex_absolute input[type=submit] svg, .form_flex_static input[type=submit] svg, #form_config_perm input[type=submit] svg, #form_reauth_user input[type=submit] svg, #form_add_user input[type=submit] svg, #form_delete_curso input[type=submit] svg, #form_add_certificado input[type=submit] svg, #form_add_curso input[type=submit] svg, .forms_controle_aula input[type=submit] svg, #form_add_curso_info input[type=submit] svg, #form_info_aluno input[type=submit] svg, .form_info input[type=submit] svg, .btn-default-delete svg, #form_add_saida_avulsa fieldset .div_submit input[type=submit] svg, .btn-default svg, form.forms_fluxo_caixa .div_submit input[type=submit] svg, .sub_menu_fluxo_caixa ul li a svg, .nav_forms ul li a svg, #page_login #login_content #form_login input[type=submit] svg, #form_info_aluno .btn_create_certificado svg, .form_info .btn_create_certificado svg, #form_info_aluno #label_checkbox_certificado_entregue svg, .form_info #label_checkbox_certificado_entregue svg, .forms_fixed .label_btn_checkbox svg, #form_add_aluno .label_btn_checkbox svg, #bg_div_id_contrato #label_id_automatico_contrato svg, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo svg, #controle_aula_content .btn_add svg, menu.submenu_page ul li a svg {
   max-width: 100px;
   max-height: 100px;
   height: auto;
   width: 20px;
 }
 
-.btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #controle_aula_content .btn_add, menu.submenu_page ul li a {
+.btn-default, form.forms_fluxo_caixa .div_submit input[type=submit], .sub_menu_fluxo_caixa ul li a, .nav_forms ul li a, #page_login #login_content #form_login input[type=submit], #form_info_aluno .btn_create_certificado, .form_info .btn_create_certificado, #form_info_aluno #label_checkbox_certificado_entregue, .form_info #label_checkbox_certificado_entregue, .forms_fixed .label_btn_checkbox, #form_add_aluno .label_btn_checkbox, #bg_div_id_contrato #label_id_automatico_contrato, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo, #controle_aula_content .btn_add, menu.submenu_page ul li a {
   background: #f0f0f0;
   color: #333;
   border: 1px solid #666;
 }
-.btn-default:hover, form.forms_fluxo_caixa .div_submit input[type=submit]:hover, .sub_menu_fluxo_caixa ul li a:hover, .nav_forms ul li a:hover, #page_login #login_content #form_login input[type=submit]:hover, .forms_fixed .label_btn_checkbox:hover, #form_add_aluno .label_btn_checkbox:hover, #bg_div_id_contrato #label_id_automatico_contrato:hover, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo:hover, #controle_aula_content .btn_add:hover, menu.submenu_page ul li a:hover {
+.btn-default:hover, form.forms_fluxo_caixa .div_submit input[type=submit]:hover, .sub_menu_fluxo_caixa ul li a:hover, .nav_forms ul li a:hover, #page_login #login_content #form_login input[type=submit]:hover, #form_info_aluno .btn_create_certificado:hover, .form_info .btn_create_certificado:hover, #form_info_aluno #label_checkbox_certificado_entregue:hover, .form_info #label_checkbox_certificado_entregue:hover, .forms_fixed .label_btn_checkbox:hover, #form_add_aluno .label_btn_checkbox:hover, #bg_div_id_contrato #label_id_automatico_contrato:hover, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo:hover, #controle_aula_content .btn_add:hover, menu.submenu_page ul li a:hover {
   background: #fdfdfd;
 }
-.btn-default:active, form.forms_fluxo_caixa .div_submit input[type=submit]:active, .sub_menu_fluxo_caixa ul li a:active, .nav_forms ul li a:active, #page_login #login_content #form_login input[type=submit]:active, .forms_fixed .label_btn_checkbox:active, #form_add_aluno .label_btn_checkbox:active, #bg_div_id_contrato #label_id_automatico_contrato:active, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo:active, #controle_aula_content .btn_add:active, menu.submenu_page ul li a:active {
+.btn-default:active, form.forms_fluxo_caixa .div_submit input[type=submit]:active, .sub_menu_fluxo_caixa ul li a:active, .nav_forms ul li a:active, #page_login #login_content #form_login input[type=submit]:active, #form_info_aluno .btn_create_certificado:active, .form_info .btn_create_certificado:active, #form_info_aluno #label_checkbox_certificado_entregue:active, .form_info #label_checkbox_certificado_entregue:active, .forms_fixed .label_btn_checkbox:active, #form_add_aluno .label_btn_checkbox:active, #bg_div_id_contrato #label_id_automatico_contrato:active, #fieldset_curso #div_curso_combo .row_combo .div_input_combo #label_check_combo:active, #controle_aula_content .btn_add:active, menu.submenu_page ul li a:active {
   background: #e3e3e3;
   box-shadow: inset 0px 1px 3px #bdbdbd;
 }
@@ -2673,6 +2673,9 @@ option[disabled] {
   min-width: 300px;
   flex-grow: 1;
 }
+#form_add_certificado #certificado_cod, #form_add_certificado #aluno_ra {
+  max-width: 110px !important;
+}
 
 #form_delete_curso {
   border: 1px solid red;
@@ -2748,21 +2751,22 @@ option[disabled] {
 }
 #form_info_aluno .fieldset, .form_info .fieldset {
   position: relative;
-  background: transparent;
+  background: #fff;
   max-width: 100%;
   margin: 20px 0px;
   border: 1px solid #aaa;
-  padding: 20px 30px;
+  padding: 30px 30px;
   height: auto;
   display: flex;
   flex-wrap: wrap;
 }
 #form_info_aluno .fieldset legend, .form_info .fieldset legend {
   background: #f0f0f0;
-  padding: 5px;
+  padding: 5px 8px;
   position: absolute;
   top: -15px;
   left: 20px;
+  border-radius: 5px;
 }
 #form_info_aluno .fieldset .row, .form_info .fieldset .row {
   max-width: 100%;
@@ -2824,6 +2828,9 @@ option[disabled] {
 #form_info_aluno .fieldset #aluno_ra, #form_info_aluno .fieldset #resp_end_numero, #form_info_aluno .fieldset #aluno_end_numero, #form_info_aluno .fieldset #aluno_genero, #form_info_aluno .fieldset #resp_genero, .form_info .fieldset #aluno_ra, .form_info .fieldset #resp_end_numero, .form_info .fieldset #aluno_end_numero, .form_info .fieldset #aluno_genero, .form_info .fieldset #resp_genero {
   max-width: 80px;
 }
+#form_info_aluno .fieldset_certificado_status, .form_info .fieldset_certificado_status {
+  background: #fffff6;
+}
 #form_info_aluno .bg_curso, .form_info .bg_curso {
   padding: 10px;
   margin-top: 20px;
@@ -2846,11 +2853,26 @@ option[disabled] {
   width: 100%;
 }
 #form_info_aluno .bg_curso label, .form_info .bg_curso label {
-  background: #ddd !important;
+  background: #ddd;
 }
 #form_info_aluno input[type=submit], .form_info input[type=submit] {
   margin: 0 auto;
   opacity: 0.3;
+}
+#form_info_aluno #label_checkbox_certificado_entregue, .form_info #label_checkbox_certificado_entregue {
+  background: #f0f0f0;
+  user-select: none;
+  margin: 5px;
+  max-width: 250px !important;
+  min-width: 180px;
+  color: #333;
+}
+#form_info_aluno #label_checkbox_certificado_entregue input, .form_info #label_checkbox_certificado_entregue input {
+  display: none;
+}
+#form_info_aluno .active, .form_info .active {
+  color: #fff !important;
+  background: #548b54 !important;
 }
 
 #div_ra_aluno {
