--- a/src/components/fluxoCaixa/viewTableEntradasInfo.html
+++ b/src/components/fluxoCaixa/viewTableEntradasInfo.html
@@ -35,7 +35,7 @@
                 <th>Curso</th>
                 <th>Parcela</th>
                 <th>Form. Pag</th>
-                <th>Valor</th>
+                <th>Valor R$</th>
                 <th></th>
             </thead>
             <tbody id='tbody'>
@@ -55,7 +55,7 @@
                 <th>Data</th>
                 <th>Descrição</th>
                 <th>Form. Pag</th>
-                <th>Valor</th>
+                <th>Valor R$</th>
                 <th></th>
 
             </thead>
