--- a/src/components/users/formAddUser.html
+++ b/src/components/users/formAddUser.html
@@ -12,12 +12,12 @@
 </div>
     <div>
         <label>Nome: </label>
-        <input class='name' type='text' id='username' value='Fulano de Tal'/>
+        <input class='name' type='text' id='username' value=''/>
     </div>
     <div>
         <label>Email: </label>
 
-        <input type='email' id='user_email' value='fulano@email.com' />
+        <input type='email' id='user_email' value='' />
     </div>
     <div>
         <label>Privilégio: </label>
@@ -27,7 +27,7 @@
 
     <div>
         <label>Password: </label>
-        <input type='password' id='user_password' value='123456'/>
+        <input type='password' id='user_password' value=''/>
     </div>
     <div>
         <label>Categoria: </label>
@@ -40,7 +40,7 @@
     </div>
     <div>
         <label>Foto URL: </label>
-        <input type='text' id='user_photoURL' value='professorDefault.png'/>
+        <input type='text' id='user_photoURL' value=''/>
     </div>
 
     <div class='div_submit'><input type='submit' value="Salvar"/></div>
