--- a/src/components/users/formReauthUser.html
+++ b/src/components/users/formReauthUser.html
@@ -10,11 +10,11 @@
     <div>
         <label>Email: </label>
 
-        <input type='email' id='user_email' value='fulano@email.com' />
+        <input type='email' id='user_email' value='' />
     </div>
     <div>
         <label>Password: </label>
-        <input type='password' id='user_password' value='123456'/>
+        <input type='password' id='user_password' value=''/>
     </div>
 
     <div class='div_submit'><input type='submit' value="Confirmar"/></div>
