Fixed - Btn delete entradas

--- a/src/components/contratos/formAddContrato.html
+++ b/src/components/contratos/formAddContrato.html
@@ -116,7 +116,7 @@
       <!------------------------------ FIELDSET CURSO------------------------------->
       <div class='fieldset' id='fieldset_curso'>
           <div  class='div_input'id='div_curso_nome'>
-            *<label>Curso: </label>
+            <label>Curso: </label>
             <select required id='curso_nome'>
             </select>
           
