--- a/src/assets/css/sass/contratos/_info_contrato.scss
+++ b/src/assets/css/sass/contratos/_info_contrato.scss
@@ -8,6 +8,7 @@
     box-sizing: border-box;
 }
 #info_contrato{
+
     display: flex;
     box-shadow: 0 1px 3px #666;
     background: #f8f8f8;
@@ -21,6 +22,15 @@
     font-size: 14px;
     color: #333;
     overflow: hidden;
+    #div_btn_salvar_contrato_pdf{
+        margin:0 auto;
+        #btn_salvar_contrato_pdf{
+            @extend .btn-default;
+            width:200px;
+            margin-left: calc(50% - 100px);
+        }
+        
+    }
 
     .fieldset {
         transition: all 1s;
@@ -73,6 +83,7 @@
             justify-content: flex-end;
             padding: 6px 0;
         }
+ 
     }
 
     // Campos com 100% width
@@ -267,3 +278,4 @@ option[disabled] {
     
 
 } // fieldset_cursos
+
