--- a/src/components/controleAula/index.html
+++ b/src/components/controleAula/index.html
@@ -2,15 +2,18 @@
 <div class="components" id="controle_aula">
   <h1>Controle de Aula</h1>
   <div class="page_content">
-    <form id="form_select_aluno">
+    <div id="bg_select_aluno">
         <div class="div_input">
           <label>Aluno: </label>
           <select id="main_select_aluno" class="input-primary">
             <option value="" disabled>Selectione um Aluno</option>
           </select>
         </div>
+        <div>
+          <button id='btn_add_aula_grupo'>+ Adicionar Aula p/ Grupo</button>
+        </div>
 
-    </form>
+    </div>
 
     <div id="controle_aula_content">
     <nav class='nav_cursos_aluno'></nav>
