--- a/src/assets/css/sass/controle_aula/_index.scss
+++ b/src/assets/css/sass/controle_aula/_index.scss
@@ -2,6 +2,7 @@
 @use './controle_aula_content';
 @use './forms';
 @use './form_add_aula';
+@use './form_add_aula_grupo';
 @use './form_add_feedback_bimestral';
 @use './edit_form';
  
