--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -11,6 +11,7 @@
   overflow: hidden;
   transition: all 0.5s;
 
+
   #bg_select_aluno {
     background: #ccc;
     border-bottom:1px solid #444;
@@ -61,6 +62,14 @@
         margin-bottom:-2px;
         margin-right:5px;
       }
+    }
+    #btn_add_aula_grupo{
+      background: rgb(197, 90, 57);
+      color:#fff;
+    &:hover{
+      background: rgb(212, 85, 46);
+
+    }
     }
   }
   
