--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1280,6 +1280,13 @@ menu.submenu_page ul li a {
   margin-bottom: -2px;
   margin-right: 5px;
 }
+#controle_aula #bg_select_aluno #btn_add_aula_grupo {
+  background: #c55a39;
+  color: #fff;
+}
+#controle_aula #bg_select_aluno #btn_add_aula_grupo:hover {
+  background: #d4552e;
+}
 
 nav.nav_cursos_aluno {
   background-color: #fff;
@@ -1748,7 +1755,7 @@ input:disabled, textarea:disabled {
 #form_add_aula_grupo #bg_aula_info {
   max-width: 100%;
   border: 2px solid #333;
-  padding: 20px 40px;
+  padding: 20px 60px;
   display: flex;
   flex-wrap: wrap;
   float: left;
@@ -1787,8 +1794,11 @@ input:disabled, textarea:disabled {
 #form_add_aula_grupo #div_select_curso {
   display: none;
 }
-#form_add_aula_grupo #select_aula option[disabled=true] {
+#form_add_aula_grupo .select_aula option[disabled=true] {
   background: #f6f6e0;
+}
+#form_add_aula_grupo #div_status_aula {
+  width: 100%;
 }
 #form_add_aula_grupo #div_status_aula label {
   position: relative;
