--- a/src/components/controleAula/formAddAulaGrupo.html
+++ b/src/components/controleAula/formAddAulaGrupo.html
@@ -4,15 +4,13 @@
   <!----------------------------------------------->
   <div id='bg_aula_info'>
 
-
-
-
     <span class="btn_close_form">X</span>
     <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-plus" viewBox="0 0 16 16">
       <path fill-rule="evenodd" d="M8 7a.5.5 0 0 1 .5.5V9H10a.5.5 0 0 1 0 1H8.5v1.5a.5.5 0 0 1-1 0V10H6a.5.5 0 0 1 0-1h1.5V7.5A.5.5 0 0 1 8 7z"/>
       <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
       <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
     </svg> Adicionar Aula</h3>
+    <input type='hidden' id='aula_categoria' value='comum'>
     <div id='div_status_aula'>
       <label class='actived_label_aula_concluida' id='label_aula_concluida'><input checked  id='aula_concluida' type='radio' name='status' value='concluida'>Concluida</label>
       <label class='' id='label_aula_com_falta'><input id='aula_com_falta' type='radio' name='status' value='falta'>Falta</label>
@@ -60,14 +58,13 @@
   <!----------------------------------------------->
 <div id='bg_grupo_alunos'>
   <div class='div_aluno_adicionado'>
-<input required='true' class='select_aluno_adicionado' type='text' list='alunos_datalist'>
+<input required class='select_aluno_adicionado' type='text' list='alunos_datalist'>
 <datalist id='alunos_datalist'>
-  
 </datalist>
-<select required='true'  disabled id='select_curso'>
-  <option  disabled  selected>Curso</option>
+<select required  disabled class='select_curso' value='' >
+  <option  disabled>Selecione o Curso</option>
 </select>
-  <select required='true' disabled='true' id='select_bimestre'>
+  <select required disabled='true' class='select_bimestre'>
     <option value='' disabled  selected>Bimestre</option>
        <option value='bimestre 1'>Bimestre 1</option>
        <option value='bimestre 2'>Bimestre 2</option>
@@ -78,7 +75,7 @@
   </select>
 
  
-  <select required='true' disabled='true' id='select_aula'>
+  <select required disabled='true' class='select_aula'>
     <option value='' disabled selected>Selecione a Aula</option>
     <option value="aula 01">Aula 1</option>
     <option value="aula 02">Aula 2</option>
@@ -95,7 +92,9 @@
     <option value="aula 13">Aula 13</option>
     <option value="aula 14">Aula 14</option>
     <option value="aula 15">Aula 15</option>
+    <!--
     <option value="aula 16">Aula 16 - Prova</option>
+    -->
 </select>
 </div>
   <button id='btn_add_aluno_grupo'>+ Aluno</button>
