--- a/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
+++ b/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
@@ -1,6 +1,11 @@
 @use '../abstracts/' as *;
 
 #bg_main_menu_lateral_admin{
+  position: fixed;
+  margin-top: -60px;
+  min-height: 100vh;
+  width:14%;
+  min-width: 160px;
   z-index: 4;
   grid-area: aside; 
   background:#222;
