--- a/src/assets/css/sass/_window_bar.scss
+++ b/src/assets/css/sass/_window_bar.scss
@@ -1,21 +1,39 @@
+@use 'abstracts' as *;
+
 #window-bar{
     opacity: 1;
-    height:30px;
-    margin-top:-20px;
+    height:35px;
+    margin-top:-30px;
     overflow: hidden;
     z-index: 9;
   
     width:100%;
     position: fixed;
-    background: #333;
+    background: #303030;
     color:#fff;
     -webkit-user-select: none;
     user-select: none;
     -webkit-app-region: drag;
     display: flex;
     justify-content: space-between;
-    #menu-bar{
-        border:1px solid #f90;
+
+        figure#bg_logo {
+      cursor:pointer;
+     
+      padding:30px 20px;
+      max-width: 100%;
+     height:auto;
+      overflow:hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      img {
+        max-width: 100px;
+        max-height: 100%;
+      }
+    }
+    #bg_menu_window_bar{
         display: flex;
         justify-content: center;
         align-items: center;
@@ -25,10 +43,7 @@
 
         }
     }
-    #bg_buttons{
-
-        display: flex;
-    border:1px solid #f90;
+    #bg_buttons_window_bar{
         display: flex;
         button{
             -webkit-app-region: no-drag;
@@ -40,10 +55,24 @@
             align-items: center;
             padding:10px;
             background: transparent;
+            color:#f0f0f0;
+            padding:0px 10px; 
+            width:40px;
+          
             &:hover{
-                background: #444;
-                color:#fff;
+                background: $primary-color;
             }
         }
+
+
+        #btn_max_restore_window{
+            padding:8px;
+            svg{
+                font-size: 6px;
+                padding: 2px;
+                 max-width:15px !important; height:auto;
+        }
+        }
+
     }
 }
