--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -3733,13 +3733,13 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
 
 #window-bar {
   opacity: 1;
-  height: 30px;
-  margin-top: -20px;
+  height: 35px;
+  margin-top: -30px;
   overflow: hidden;
   z-index: 9;
   width: 100%;
   position: fixed;
-  background: #333;
+  background: #303030;
   color: #fff;
   -webkit-user-select: none;
   user-select: none;
@@ -3747,21 +3747,32 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
   display: flex;
   justify-content: space-between;
 }
-#window-bar #menu-bar {
-  border: 1px solid #f90;
+#window-bar figure#bg_logo {
+  cursor: pointer;
+  padding: 30px 20px;
+  max-width: 100%;
+  height: auto;
+  overflow: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-#window-bar #menu-bar p {
+#window-bar figure#bg_logo img {
+  max-width: 100px;
+  max-height: 100%;
+}
+#window-bar #bg_menu_window_bar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#window-bar #bg_menu_window_bar p {
   font-size: 12px;
 }
-#window-bar #bg_buttons {
-  display: flex;
-  border: 1px solid #f90;
+#window-bar #bg_buttons_window_bar {
   display: flex;
 }
-#window-bar #bg_buttons button {
+#window-bar #bg_buttons_window_bar button {
   -webkit-app-region: no-drag;
   margin: 0px;
   border: 0px;
@@ -3771,10 +3782,21 @@ form.forms_fluxo_caixa .div_submit input[type=submit] {
   align-items: center;
   padding: 10px;
   background: transparent;
+  color: #f0f0f0;
+  padding: 0px 10px;
+  width: 40px;
 }
-#window-bar #bg_buttons button:hover {
-  background: #444;
-  color: #fff;
+#window-bar #bg_buttons_window_bar button:hover {
+  background: #245da7;
+}
+#window-bar #bg_buttons_window_bar #btn_max_restore_window {
+  padding: 8px;
+}
+#window-bar #bg_buttons_window_bar #btn_max_restore_window svg {
+  font-size: 6px;
+  padding: 2px;
+  max-width: 15px !important;
+  height: auto;
 }
 
 @keyframes spinner-line-fade-more {
@@ -3884,7 +3906,7 @@ body {
   background: #ccc;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   position: relative;
-  padding-top: 20px;
+  padding-top: 30px;
 }
 
 h1 {
