--- a/src/components/login/index.html
+++ b/src/components/login/index.html
@@ -11,7 +11,7 @@
     <div><label><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
       <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
     </svg></label>
-    <input placeholder='Email do usuário' type='text' value='kleber_germano@outlook.com' id='user_name'></div>
+    <input placeholder='Email do usuário' type='text' value='' id='user_name'></div>
     <div>
       <label> 
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
