--- a/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
+++ b/src/assets/css/sass/elements/_main_menu_lateral_admin.scss
@@ -1,32 +1,16 @@
 @use '../abstracts/' as *;
 
 #bg_main_menu_lateral_admin{
+  position: relative;
+  transition: all 0.3s;
   position: fixed;
   margin-top: -60px;
   min-height: 100vh;
   width:14%;
-  min-width: 160px;
+  min-width: 150px;
   z-index: 4;
   grid-area: aside; 
   background:#222;
-
-    figure#bg_logo {
-      cursor:pointer;
-     
-      padding:20px 60px;
-      max-width: 100%;
-     height:auto;
-      overflow:hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      img {
-        max-width: 150px;
-        max-height: 100%;
-      }
-    }
- 
   nav{
     margin-top:30px;
     ul li {
@@ -46,9 +30,14 @@
         }
         &:active{
           background:#2c2c2c;
-         
 
         }
+        span{
+        //  transition-timing-function: ease-in;
+        opacity: 1;
+
+        }
+
       }
     }
     .active{
@@ -59,3 +48,60 @@
     }
   }
 }
+
+@media screen and (max-width: 1130px) {
+  #bg_main_menu_lateral_admin{
+
+ #nav_main_menu_lateral_admin{
+  a{font-size: 12px ;}
+ }
+} 
+}
+
+
+@media screen and (max-width: 1000px) {
+  #bg_main_menu_lateral_admin{
+    width:60px;
+    min-width:60px;
+    nav{
+
+      a{
+        position: relative;
+       
+        svg{
+
+          max-height:20px !important;
+          max-width:20px !important;
+          height:20px !important;
+          width:20px !important;
+        }
+        span{
+          display: none;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          position: absolute;
+          opacity: 0 !important;
+          right: -100px;
+          top:10px;
+          padding:5px;
+          background: #333;
+          border-radius: 5px;
+          width:100px;
+          height:30px;
+         
+        }
+         &:hover{
+           span{
+          opacity: 1 !important;
+          display: flex;
+
+
+
+           }
+         }
+     }
+     } 
+  }
+
+ }
