--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -938,28 +938,16 @@ menu.submenu_page ul li a {
 }
 
 #bg_main_menu_lateral_admin {
+  position: relative;
+  transition: all 0.3s;
   position: fixed;
   margin-top: -60px;
   min-height: 100vh;
   width: 14%;
-  min-width: 160px;
+  min-width: 150px;
   z-index: 4;
   grid-area: aside;
   background: #222;
-}
-#bg_main_menu_lateral_admin figure#bg_logo {
-  cursor: pointer;
-  padding: 20px 60px;
-  max-width: 100%;
-  height: auto;
-  overflow: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#bg_main_menu_lateral_admin figure#bg_logo img {
-  max-width: 150px;
-  max-height: 100%;
 }
 #bg_main_menu_lateral_admin nav {
   margin-top: 30px;
@@ -982,11 +970,53 @@ menu.submenu_page ul li a {
 #bg_main_menu_lateral_admin nav ul li a:active {
   background: #2c2c2c;
 }
+#bg_main_menu_lateral_admin nav ul li a span {
+  opacity: 1;
+}
 #bg_main_menu_lateral_admin nav .active {
   color: #6dacfd;
   background: #1f1f1f;
 }
 
+@media screen and (max-width: 1130px) {
+  #bg_main_menu_lateral_admin #nav_main_menu_lateral_admin a {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  #bg_main_menu_lateral_admin {
+    width: 60px;
+    min-width: 60px;
+  }
+  #bg_main_menu_lateral_admin nav a {
+    position: relative;
+  }
+  #bg_main_menu_lateral_admin nav a svg {
+    max-height: 20px !important;
+    max-width: 20px !important;
+    height: 20px !important;
+    width: 20px !important;
+  }
+  #bg_main_menu_lateral_admin nav a span {
+    display: none;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    opacity: 0 !important;
+    right: -100px;
+    top: 10px;
+    padding: 5px;
+    background: #333;
+    border-radius: 5px;
+    width: 100px;
+    height: 30px;
+  }
+  #bg_main_menu_lateral_admin nav a:hover span {
+    opacity: 1 !important;
+    display: flex;
+  }
+}
 #update_app_content {
   max-width: 600px;
   padding: 50px;
@@ -3943,6 +3973,15 @@ h1 {
 @media (min-width: 1600px) {
   #page_content {
     margin: 0px 160px 0px 160px;
+  }
+}
+@media screen and (max-width: 1000px) {
+  #adminContent {
+    grid-template-columns: 60px 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+
+  #page_content {
+    margin: 0px 20px 0px 20px !important;
   }
 }
 .components h3 {
