--- a/src/assets/css/sass/login/_index.scss
+++ b/src/assets/css/sass/login/_index.scss
@@ -10,9 +10,14 @@
     min-height: 100vh;
     background: url('../img/background-login.jpg') no-repeat;
     background-size: cover;
+
+
+
     #login_content{
+        position: relative;
         max-width:400px;
         margin-top:-15%;
+ 
         #login_logo{
             display: flex;
             justify-content: center;
@@ -25,11 +30,33 @@
         }
 
         #form_login{
+            position: relative;
             max-width:400px;
             min-height:250px;
             background:#ffffff66; 
             border-radius: 5px;
             padding:40px 30px;
+
+            #error_login_msg{
+                min-width: calc(100% - 10px);
+                position: absolute;
+                left:5px;
+                color:rgb(250, 75, 75); 
+                padding:3px; 
+                background:#00000099;
+                top:-15px;
+                height: auto;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                border-radius: 5px;
+                p{
+                    font-size: 11px;
+                }
+
+            }
+    
+
             h3{text-align: center; padding-bottom:10px; color: darken($primary-color, 20%)}
             div{
                 margin: auto;
