--- a/src/components/login/index.html
+++ b/src/components/login/index.html
@@ -17,10 +17,10 @@
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-lock-fill" viewBox="0 0 16 16">
         <path d="M8 1a2 2 0 0 1 2 2v4H6V3a2 2 0 0 1 2-2zm3 6V3a3 3 0 0 0-6 0v4a2 2 0 0 0-2 2v5a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V9a2 2 0 0 0-2-2z"/>
       </svg>
-
-    </label> <input placeholder='Insira sua senha' type='password' value='' id='password'></div>
+    </label> <input placeholder='Insira sua senha' type='password' value='' id='password'>
+  </div>
     <input type='submit' value='Entrar'>
-</form>
+  </form>
 </div>
 </div>
 
