--- a/src/components/logData/viewTableLogData.html
+++ b/src/components/logData/viewTableLogData.html
@@ -6,6 +6,8 @@
                 <option value='log_contratos'>Log Contratos</option>
                 <option value='log_cursos_info'>Log Cursos Info.</option>
                 <option value='log_alunato'>Log Alunato</option>
+                <option value='log_users'>Log Users</option>
+
                 <option value='log_fluxo_caixa'>Log Fluxo de Caixa</option>
             </select>
         </div>
