--- a/src/assets/css/sass/fluxo_caixa/_resumoFluxoCaixa.scss
+++ b/src/assets/css/sass/fluxo_caixa/_resumoFluxoCaixa.scss
@@ -98,6 +98,9 @@
        // color:rgb(90, 216, 90);
         text-align: center;
     }
+    .td_obs{
+        text-align: center;
+    }
 
 }
 #bg_saidas_info_table{
