--- a/src/components/fluxoCaixa/viewTableEntradasInfo.html
+++ b/src/components/fluxoCaixa/viewTableEntradasInfo.html
@@ -35,10 +35,12 @@
                 <th>Curso</th>
                 <th>Parcela</th>
                 <th>Form. Pag</th>
+                <th>obs.</th>
                 <th>Valor R$</th>
                 <th></th>
             </thead>
             <tbody id='tbody'>
+                <td>...</td>
                 <td>...</td>
                 <td>...</td>
                 <td>...</td>
