--- a/src/assets/css/sass/abstracts/_tables.scss
+++ b/src/assets/css/sass/abstracts/_tables.scss
@@ -29,6 +29,12 @@
     th, td{
         padding:5px 10px;
         img{width: 50px; height: 50px;  }
+        textarea{
+            font-size: 11px;
+            background: transparent;
+            padding:2px;
+
+        }
         button{
             padding:5px; font-size: 12px;
                 float:none!important;
