--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -800,6 +800,11 @@ inputs, .input-primary {
   width: 50px;
   height: 50px;
 }
+.tables th textarea, .table_info th textarea, #view_table_users th textarea, .view_table th textarea, .tables td textarea, .table_info td textarea, #view_table_users td textarea, .view_table td textarea {
+  font-size: 11px;
+  background: transparent;
+  padding: 2px;
+}
 .tables th button, .table_info th button, #view_table_users th button, .view_table th button, .tables td button, .table_info td button, #view_table_users td button, .view_table td button {
   padding: 5px;
   font-size: 12px;
@@ -973,9 +978,17 @@ menu.submenu_page ul li a {
 #bg_main_menu_lateral_admin nav ul li a span {
   opacity: 1;
 }
+#bg_main_menu_lateral_admin nav li[data-auth=users], #bg_main_menu_lateral_admin nav li[data-auth=contratos] {
+  border-top: 1px solid #111;
+  margin-top: 10px;
+}
+#bg_main_menu_lateral_admin nav li[data-auth=users] a, #bg_main_menu_lateral_admin nav li[data-auth=contratos] a {
+  padding-top: 20px;
+}
 #bg_main_menu_lateral_admin nav .active {
   color: #6dacfd;
   background: #1f1f1f;
+  opacity: 1 !important;
 }
 
 @media screen and (max-width: 1130px) {
@@ -3477,11 +3490,13 @@ option[disabled] {
   margin-top: 20px;
   margin-bottom: 20px;
 }
+.bg_info_tables table {
+  font-size: 13px;
+}
 .bg_info_tables table caption {
   padding: 8px;
   background: #333;
   color: #f0f0f0;
-  font-size: 14px;
 }
 .bg_info_tables table thead th {
   height: 40px;
@@ -3498,18 +3513,22 @@ option[disabled] {
   background: #f6f6e0;
 }
 .bg_info_tables table tbody tr td {
-  padding: 10px 5px;
+  padding: 0px 5px;
 }
 .bg_info_tables table tbody .td_linha {
   text-align: center;
   background: #ccc;
   color: #666;
 }
-.bg_info_tables table tbody .td_data, .bg_info_tables table tbody .td_parcela, .bg_info_tables table tbody .td_valor_total, .bg_info_tables table tbody .td_controls {
+.bg_info_tables table tbody .td_data, .bg_info_tables table tbody .td_parcela, .bg_info_tables table tbody .td_curso, .bg_info_tables table tbody .td_valor_total, .bg_info_tables table tbody .td_controls, .bg_info_tables table tbody .td_form_pag {
   text-align: center;
+}
+.bg_info_tables table tbody .td_controls {
+  padding: 5px;
 }
 .bg_info_tables table tbody .td_valor_total {
   color: #247e24;
+  font-size: 14px;
 }
 
 #bg_saidas_info_table caption {
@@ -3519,6 +3538,7 @@ option[disabled] {
   text-align: center;
   background: #bd4343;
   color: #fff;
+  padding: 5px;
 }
 
 #bg_entradas_info_table caption {
@@ -3528,10 +3548,23 @@ option[disabled] {
   text-align: center;
   background: #464;
   color: #fff;
+  padding: 5px;
 }
 
 #entrada_avulsa_table_info {
   margin-top: 40px;
+}
+
+#pag_mensal_table_info .td_obs {
+  text-align: center;
+  font-size: 11px;
+  max-width: 100px;
+  min-width: 50px;
+}
+#pag_mensal_table_info .td_obs textarea {
+  width: 100%;
+  background: transparent;
+  padding: 2px;
 }
 
 .bg_info_resumo h3 {
@@ -3620,6 +3653,9 @@ option[disabled] {
 .bg_info_resumo .td_total {
   background: #ccccce;
   color: #085f08;
+  text-align: center;
+}
+.bg_info_resumo .td_obs {
   text-align: center;
 }
 
