--- a/src/assets/css/sass/fluxo_caixa/_infoTables.scss
+++ b/src/assets/css/sass/fluxo_caixa/_infoTables.scss
@@ -5,11 +5,12 @@
         margin-bottom:20px;
     }
     table{
+        font-size:14px;
+
         caption{
             padding:8px;
             background:#333;
             color:#f0f0f0;
-            font-size:14px;
         }
         thead{
             th{
@@ -29,20 +30,26 @@
                     background: #f6f6e0;
                 }
                 td{
-                    padding:10px 5px;
+                    padding: 5px;
+                    text-align: center;
                 }
+            }
+            #tr_resumo{
+                td{padding:10px;}
             }
             .td_linha{
                 text-align: center;
                 background:#ccc;
                 color:#666;
             }
-            .td_data, .td_parcela, .td_valor_total, .td_controls{
-                text-align: center;
+         
+            .td_controls{
+                padding:5px;
             }
          
             .td_valor_total{
                 color:#247e24;
+                font-size: 14px;
             }
         }
     }
@@ -58,7 +65,6 @@
             color:#fff;
         }
     }
-  
 }
 #bg_entradas_info_table{
         caption{
@@ -66,14 +72,26 @@
         } 
             tr#tr_resumo{
                 #td_res_valor_total{
-                    text-align: center;
                     background:#464; 
                     color:#fff;
                 }
             }
-
 }
+
 #entrada_avulsa_table_info{
     margin-top:40px;
 }
     
+#pag_mensal_table_info{
+    .td_obs{
+        text-align: center;
+        font-size: 11px;
+        max-width: 100px;
+        min-width: 50px;
+        textarea{
+            width: 100%;
+            background: transparent;
+            padding:2px;
+        }
+    }
+}
