Fixed - Gerava undefined ao alterar o mês em fluxo_caixa

--- a/src/components/logData/viewTableLogData.html
+++ b/src/components/logData/viewTableLogData.html
@@ -17,13 +17,15 @@
      
      <thead> 
         <th>#</th>
-        <th>Data Hora</th>
+        <th>Data</th>
+        <th>Hora</th>
         <th>Usuário</th>
         <th>Level</th>
         <th>Ação</th>
         <th>Menssagem</th>
     </thead
         <tbody id='tbody'>
+            <td>...</td>
             <td>...</td>
             <td>...</td>
             <td>...</td>
